@@ -1450,7 +1450,7 @@ def test_create_archive_with_files_calls_borg_with_list_parameter_and_warning_ou
         },
         storage_config={},
         local_borg_version='1.2.3',
-        files=True,
+        list_files=True,
     )
 
 
@@ -1490,7 +1490,7 @@ def test_create_archive_with_files_and_log_info_calls_borg_with_list_parameter_a
         },
         storage_config={},
         local_borg_version='1.2.3',
-        files=True,
+        list_files=True,
     )
 
 
